Fixed overlapping content on touch devices

--- a/Style/Common.css
+++ b/Style/Common.css
@@ -374,15 +374,18 @@ main {
     display: grid;
     grid-template-columns: 16em 50%;
     gap: 0.5em;
-    height: 2.5em;
     align-items: center;
 }
 .content-item a{
     text-decoration: underline;
-    height: 2.5em;
+    font-size: small;
+    margin: 0;
+}
+.content-item h2{
     margin: 0;
 }
 .content-item p{
+    margin: 0;
     opacity: 0;
     transition: opacity 0s;
     transition-delay: 0.2s;
@@ -409,5 +412,11 @@ main {
     .content-item p{
         opacity: 1;
         transition-delay: 0s;
+    }
+    .content-item .short{
+        display: none;
+    }
+    .content-item .content-title{
+        display: block;
     }
 }
